# bazel-build-protobuf

./: BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/: BUILD.bazel  main.go
internal/utils/: BUILD.bazel  math.go
proto/: BUILD.bazel  HelloWorld.proto
proto/helloworld/: BUILD.bazel  HelloWorld.proto
