load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle_binary(
#     name = "gazelle-protobuf",
#     languages = [
#         "@bazel_gazelle//language/go",
#         "@bazel_gazelle//language/proto",
#         # must be after the proto extension (order matters)
#         # "@build_stack_rules_proto//language/protobuf",
#     ],
# )

# gazelle:go_generate_proto true
# gazelle:proto default
# gazelle:prefix github.com/alexbathome/bazel-build-protobuf
gazelle(
    name = "gazelle",
    # gazelle = ":gazelle-protobuf",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-build_file_proto_mode=disable_global",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
