load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/alexbathome/bazel-build-protobuf/cmd",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gravitational_teleport_api//client"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
